--- a/index-prueba-m3.html
+++ b/index-prueba-m3.html
@@ -12,6 +12,11 @@
 <body>
 
   <h1>The Great <span id="colorDisplay"></span> Guessing Game</h1>
+  <h2>
+    <br>
+    <span id="rgbCode">RGB</span>
+    <br>
+  </h2>
 
   <div id="stripe">
     <button id="reset">Nuevos colores</button>
