se genera el cambio de colores para los squares y el pickedcolors

--- a/index-prueba-m3.html
+++ b/index-prueba-m3.html
@@ -11,22 +11,14 @@
 
 <body>
 
-  <h1>The Great <span id="colorDisplay"></span> Guessing Game</h1>
-  <h2>
-    <br>
-    <span id="rgbCode">RGB</span>
-    <br>
-  </h2>
+  <h1> The Great <br><span id="colorDisplay"></span><br> Guessing Game </h1>
 
-  <div id="stripe">
-    <button id="reset">Nuevos colores</button>
-    <span id="message"></span>
-    <button id="easyBtn">Easy</button>
-    <button class="elegido" id="hardBtn">Hard</button>
+  <div>
+    <span class="message">Mensaje</span>
   </div>
 
   <div class="container">
-    <div class="square" id="sq1"></div>
+    <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
