se genera clickedcolor y se compara con el pickedcolor

--- a/index-prueba-m3.html
+++ b/index-prueba-m3.html
@@ -14,7 +14,10 @@
   <h1> The Great <br><span id="colorDisplay"></span><br> Guessing Game </h1>
 
   <div>
+    <button id="reset">Play Again</button>
     <span class="message">Mensaje</span>
+    <button id="easyBtn">Easy</button>
+    <button class="elegido" id="hardBtn">Hard</button>
   </div>
 
   <div class="container">
