--- a/index-prueba-m3.html
+++ b/index-prueba-m3.html
@@ -13,11 +13,11 @@
 
   <h1> The Great <br><span id="colorDisplay"></span><br> Guessing Game </h1>
 
-  <div>
+  <div id="stripe">
     <button id="reset">Play Again</button>
-    <span class="message">Mensaje</span>
     <button id="easyBtn">Easy</button>
-    <button class="elegido" id="hardBtn">Hard</button>
+    <button id="hardBtn">Hard</button>
+    <br> <span class="message"></span> <br>
   </div>
 
   <div class="container">
