se realizan cambios en el ejercicio logrando resultado exitoso, falta mejorar CSS

--- a/index-prueba-m3.html
+++ b/index-prueba-m3.html
@@ -13,11 +13,11 @@
 
   <h1> The Great <br><span id="colorDisplay"></span><br> Guessing Game </h1>
 
-  <div id="stripe">
-    <button id="reset">Play Again</button>
+  <div>
+    <button id="reset">Nuevo color</button>
+    <span class="message"></span>
     <button id="easyBtn">Easy</button>
-    <button id="hardBtn">Hard</button>
-    <br> <span class="message"></span> <br>
+    <button class="selected" id="hardBtn">Hard</button>
   </div>
 
   <div class="container">
@@ -28,7 +28,10 @@
     <div class="square"></div>
     <div class="square"></div>
   </div>
+
+  <script src="script-m3.js"></script>
+  
 </body>
-<script src="script-m3.js"></script>
+
 
 </html>
