se dan estilos propios a la pagina

--- a/index-prueba-m3.html
+++ b/index-prueba-m3.html
@@ -7,13 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evaluacion M3</title>
   <link rel="stylesheet" href="style-m3.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Grape+Nuts&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
 
   <h1> The Great <br><span id="colorDisplay"></span><br> Guessing Game </h1>
 
-  <div>
+  <div class="botones">
     <button id="reset">Nuevo color</button>
     <span class="message"></span>
     <button id="easyBtn">Easy</button>
